Fix bugs and errors

--- a/.github/workflows/win.yaml
+++ b/.github/workflows/win.yaml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   build:
+    permissions: write-all
     runs-on: windows-latest
     timeout-minutes: 30
 
@@ -51,10 +52,28 @@ jobs:
         cp uuid.dll ../tools
         cp libuuid.dll.a ../tools
         cp uuid.lib ../tools
+        cp -r ../winid* ../tools
 
     - name: Set execution policy for PowerShell scripts
       run: |
         Set-ExecutionPolicy Bypass -Scope Process -Force
+    - name: Create winid directory and copy files
+      run: |
+        mkdir winid
+        mkdir winid/include
+        cp -r ./tools winid/
+        cp ./src/winid.c winid/include/
+        cp ./src/winid.h winid/include/
+
+    - name: Zip the winid folder
+      run: |
+        Compress-Archive -Path ./winid -DestinationPath ./winid.z
+
+    - name: Create GitHub Release
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        gh release create ${{ github.ref_name }} winid.zip --generate-notes --title "Version ${{ github.ref_name }}"
 
     - name: Set execute permission (Windows PowerShell) and Submit Chocolatey Package
       run: |
@@ -63,14 +82,5 @@ jobs:
       env:
         CHOCO_API_KEY: ${{ secrets.CHOCO_API_KEY }}
 
-    # - name: Build Chocolatey Package
-    #   shell: pwsh
-    #   run: |
-    #     pwsh Set-ExecutionPolicy Bypass -File ./scripts/build_choco.ps1
 
-    # - name: Submit Chocolatey Package
-    #   run: |
-    #     pwsh Set-ExecutionPolicy Bypass -File ./scripts/push_choco.ps1
-    #   env:
-    #     CHOCO_API_KEY: ${{ secrets.CHOCO_API_KEY }}
 
