--- a/.github/workflows/win.yaml
+++ b/.github/workflows/win.yaml
@@ -2,8 +2,8 @@ name: Windows uuid package for C
 
 on:
   push:
-    branches:
-      - master
+    tag:
+      - 'v*'
 
 jobs:
   build:
@@ -74,16 +74,19 @@ jobs:
         Get-ChildItem -Path .\winid.zip
 
     - name: Create GitHub Release
+      if: startsWith(github.ref, 'refs/tags/')
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        gh release create ${{ github.ref_name }} winid.zip --generate-notes --title "Version ${{ github.ref_name }}"
+        TAG_VERSION=${{ github.ref_name }}
+        gh release create $TAG_VERSION winid.zip --generate-notes --title "Version $TAG_VERSION"
 
     - name: Set execute permission (Windows PowerShell) and Submit Chocolatey Package
       run: |
         Set-ExecutionPolicy Bypass -Scope Process -Force 
         ./scripts/*.ps1
       env:
+        TAG_VERSION: ${{ github.ref_name }}
         CHOCO_API_KEY: ${{ secrets.CHOCO_API_KEY }}
 
 
