--- a/.github/workflows/win.yaml
+++ b/.github/workflows/win.yaml
@@ -78,7 +78,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        TAG_VERSION=${{ github.ref_name }}
+        $TAG_VERSION=${{ github.ref_name }}
         gh release create $TAG_VERSION winid.zip --generate-notes --title "Version $TAG_VERSION"
 
     - name: Set execute permission (Windows PowerShell) and Submit Chocolatey Package
