--- a/.github/workflows/win.yaml
+++ b/.github/workflows/win.yaml
@@ -28,7 +28,6 @@ jobs:
       run: |
         choco install mingw cmake make -y
 
-
     - name: Set environment variables for Path
       run: |
         $env:Path += ";C:\ProgramData\chocolatey\lib\mingw\tools\install"
@@ -57,6 +56,7 @@ jobs:
     - name: Set execution policy for PowerShell scripts
       run: |
         Set-ExecutionPolicy Bypass -Scope Process -Force
+
     - name: Create winid directory and copy files
       run: |
         mkdir winid
@@ -78,8 +78,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-
-        $TAG_VERSION=${{ github.ref_name }}
+        $TAG_VERSION = "${{ github.ref_name }}"
         gh release create $TAG_VERSION winid.zip --generate-notes --title "Version $TAG_VERSION"
 
     - name: Set execute permission (Windows PowerShell) and Submit Chocolatey Package
